--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -18,6 +18,7 @@
       "@myorg/books/data-access": ["libs/books/data-access/src/index.ts"],
       "@myorg/books/feature": ["libs/books/feature/src/index.ts"],
       "@myorg/books/ui": ["libs/books/ui/src/index.ts"],
+      "@myorg/shared-models": ["libs/shared-models/src/index.ts"],
       "@myorg/ui": ["libs/ui/src/index.ts"]
     }
   },
