--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "private": true,
   "dependencies": {
     "core-js": "^3.6.5",
+    "express": "4.17.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-is": "17.0.2",
@@ -22,8 +23,10 @@
     "@nrwl/cli": "12.10.0",
     "@nrwl/cypress": "12.10.0",
     "@nrwl/eslint-plugin-nx": "12.10.0",
+    "@nrwl/express": "12.10.0",
     "@nrwl/jest": "12.10.0",
     "@nrwl/linter": "12.10.0",
+    "@nrwl/node": "12.10.0",
     "@nrwl/nx-cloud": "latest",
     "@nrwl/react": "12.10.0",
     "@nrwl/tao": "12.10.0",
@@ -31,6 +34,7 @@
     "@nrwl/workspace": "12.10.0",
     "@testing-library/react": "11.2.6",
     "@testing-library/react-hooks": "7.0.1",
+    "@types/express": "4.17.0",
     "@types/jest": "27.0.2",
     "@types/node": "14.14.33",
     "@types/react": "17.0.3",
